@@ -1,5 +1,8 @@
 2008-07-01  Albert Graef  <Dr.Graef@t-online.de>
 
+	* lib/primitives.pure, runtime.cc/h: Add the GMP gcd and lcm
+	functions.
+
 	* lexer.ll: 'list' command now also prints fixity and nullary
 	declarations of listed symbols.
 
